--- a/ToriNotes/Modules/Note/Scenes/NotesList/NotesList.storyboard
+++ b/ToriNotes/Modules/Note/Scenes/NotesList/NotesList.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -89,6 +90,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="addNoteButton" destination="OPN-At-0eD" id="Lrc-hR-SVz"/>
                         <outlet property="emptyView" destination="wDX-re-Kpl" id="ewc-Ru-BoE"/>
                         <outlet property="notesCountLabel" destination="Q2Y-0o-fek" id="ok3-FG-B7J"/>
                         <outlet property="tableView" destination="ZYn-R0-NIM" id="2PT-U0-YES"/>
@@ -105,7 +107,7 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
